--- a/index.html
+++ b/index.html
@@ -13,63 +13,52 @@
 
     <div class="top-title">
       <p>RESULTS ON</p>
-      <p>17TH MAR 2025</p>
+
+      <div class="date-navigation">
+        <button id="prevDate" class="arrow">&#10094;</button>
+        <p id="dateDisplay">17TH MAR 2025</p>
+        <button id="nextDate" class="arrow">&#10095;</button>
+      </div>
     </div>
 
     <h1 class="main-title">BEST PLAYER</h1>
 
     <div class="players">
 
-      <!-- LEFT -->
+      <!-- LEFT PLAYER -->
       <div class="player">
-        <h2 class="role">NOOB</h2>
+        <h2 class="role"></h2>
         <div class="image-placeholder"></div>
-        <p class="nickname">"KOKA"</p>
-        <p class="name gradient">KACPER WŁODARCZYK</p>
-        <div class="stats">
-          <p>RATING</p>
-          <span>0.46</span>
-        </div>
+        <p class="nickname"></p>
+        <p class="name gradient"></p>
+        <div class="stats"></div>
       </div>
 
-      <!-- CENTER -->
+      <!-- CENTER PLAYER -->
       <div class="player center">
+        <h2 class="role"></h2>
         <div class="image-placeholder big"></div>
-        <p class="nickname">"MONTE"</p>
-        <p class="name gradient">BARTOSZ DAROS</p>
-        <div class="stats-row">
-          <div>
-            <p>ADR</p>
-            <span>95.71</span>
-          </div>
-          <div>
-            <p>RATING</p>
-            <span>1.31</span>
-          </div>
-          <div>
-            <p>KILLS</p>
-            <span>141</span>
-          </div>
-        </div>
+        <p class="nickname"></p>
+        <p class="name gradient"></p>
+        <div class="stats-row"></div>
       </div>
 
-      <!-- RIGHT -->
+      <!-- RIGHT PLAYER -->
       <div class="player">
-        <h2 class="role">AIM BEAST</h2>
+        <h2 class="role"></h2>
         <div class="image-placeholder"></div>
-        <p class="nickname">"KOKA"</p>
-        <p class="name gradient">KACPER WŁODARCZYK</p>
-        <div class="stats">
-          <p>HEADSHOT %</p>
-          <span>75</span>
-        </div>
+        <p class="nickname"></p>
+        <p class="name gradient"></p>
+        <div class="stats"></div>
       </div>
 
     </div>
-
   </div>
 
   <div class="bottom-gradient"></div>
+
+  <!-- Script -->
+  <script src="script.js"></script>
 
 </body>
 </html>
